index.html modified

--- a/public/index.html
+++ b/public/index.html
@@ -29,6 +29,7 @@
 <body>
     <form class="task-form">
         <h4>Task Manager</h4>
+        <h6>Add, Delete And Edit Task</h6>
         <div class="form-control">
             <input
              type="text"
